--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 	<meta>
 		<meta charset="utf-8" />
-		<title>Nostx - redirect to Nostr items in Your Apps. </title>
-		<meta name="description" content="This apps is Nostr items redirect to your best used Apps. ">
+		<title>はじめよう Nostr</title>
+		<meta name="description" content="Nostr とは？アカウントどうやって作るの？日本人向けのアカウント作成アプリです">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	    <link rel="stylesheet" href="%sveltekit.assets%/bootstrap.min.css">
 		<meta name="viewport" content="width=device-width" />
